--- a/fontend/packs/index.html
+++ b/fontend/packs/index.html
@@ -12,7 +12,10 @@
 <body>
     <!-- Logo de La Voz -->
     <logo-lavoz></logo-lavoz>
-    
+      
+    <!-- Nav -->
+    <nav-component></nav-component>
+
     <!--Contenedor Cards-->
     <div class="container" id="seccionCard">
       <section class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-4 d-flex justify-content-around" id="cardsContainer">
@@ -80,4 +83,5 @@
   <script src="../js/logoLaVoz.js"></script>
   <script src="../js/footerComponent.js"></script>
   <script src="../js/pack.js"></script>
+  <script src="../js/navComponent.js"></script>
 </html>
