--- a/fontend/trivia/index.html
+++ b/fontend/trivia/index.html
@@ -13,6 +13,9 @@
 <!-- Logo de La Voz -->
 <logo-lavoz></logo-lavoz>
 
+<!-- Nav -->
+<nav-component></nav-component>
+
 <!-- Contenedor principal -->
 <div class="d-flex justify-content-center align-items-start py-5">
     <div class="containerForm">
@@ -80,6 +83,7 @@
 <script src="../js/logoLaVoz.js"></script>
 <script src="../js/spinnerComponent.js"></script>
 <script src="../js/trivia.js"></script>
+<script src="../js/navComponent.js"></script>
 
 <!-- Footer -->
 <footer-custom></footer-custom>
