Vuelvo al punto del SQL con el navCustom

--- a/fontend/packs/index.html
+++ b/fontend/packs/index.html
@@ -17,7 +17,7 @@
     <nav-component></nav-component>
 
     <!--Contenedor Cards-->
-    <div class="container" id="seccionCard">
+    <div class="container mt-5" id="seccionCard">
       <section class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-4 d-flex justify-content-around" id="cardsContainer">
         <!--Inyecto las Cards-->
       </section>
